# Trie-based-regular-expression

./: README.md  regpuchi.cabal  triehash.hs
docs/: regvm.md  regvspsc.md  sedvm.md
example/: Vis1.hs
example/awk/: Ex1.hs
example/awk/in/: ex1.txt
example/sed/: Ex1.hs  Ex2.hs
example/sed/in/: ex1.sed  ex1.txt  ex3.txt  ex4.txt
regpuchi/: README.md  regpuchi.cabal
regpuchi/.stack-work/install/x86_64-osx/lts-9.4/8.0.2/lib/x86_64-osx-ghc-8.0.2/regpuchi-0.1.0.0-GMF9tt5GphaELrw8R3G8mc/: Lib.dyn_hi  Lib.hi
regpuchi/.stack-work/install/x86_64-osx/lts-9.4/8.0.2/pkgdb/: package.cache  regpuchi-0.1.0.0-GMF9tt5GphaELrw8R3G8mc.conf
regpuchi/src/: Lib.hs
regpuchi/src/Data/: .#Ps.hs  M.hs  Ps.hs  RegE.hs
regpuchi/src/MData/: Graph.hs  M.hs  Ps.hs  RegE.hs
regpuchi/src/MData/Parser/: .#RegEP.hs  ByteStr.hs  RegEP.hs
regpuchi/src/Tools/: Vis.hs
regpuchi/src/Tools/GraphViz/: Base.hs
src/: Lib.hs
src/Cache/: ExPs1.hs  Parse.hs  Ps2.hs  Vis.hi  Vis.hs  Vis2.hs
src/CodeGen_/GraphViz/: Base.hs
src/Control_/: M.hs  State.hs
src/Data_/: Graph.hs  Ps.hs  RegE.hs
src/Parser_/: Base.hs  ByteStr.hs  RegEP.hs
src/Parser_/Awk_/: Base.hs
src/Parser_/Awk_/Action_/: Action.hs
src/Parser_/Awk_/Action_/Statement_/: Assign.hs  Print.hs
src/Parser_/Awk_/Action_/Statement_/Expression_/: Base.hs
src/Parser_/Awk_/Data_/: Data.hs
src/Parser_/Awk_/Function_/: Function.hs
src/Parser_/Awk_/Pattern_/: Pattern.hs
src/Parser_/Awk_/State_/: State.hs
src/Parser_/Awk_/Statement_/: Assign.hs  Cond.hs  Print.hs
src/Parser_/Awk_/Statement_/Expression_/: Base.hs  Base1.hs  BuiltIn.hs
src/Parser_/Base_/: Base.hs  Bool.hs  ByteStr.hs  Float.hs  Int.hs  List.hs  Preprocess.hs  RegEP.hs  RegEP__.hs  regEP_.hs
src/Parser_/Sed_/: Base.hs
src/System_/: IO.hs
src/System_/Awk_/: Base.hs
src/System_/Sed_/: Base.hs
