name:                regpuchi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/regpuchi#readme
license:             BSD3
license-file:        LICENSE
author:              Hiroshi Sawada
maintainer:          vrodxda@gmail.com
copyright:           2017 Hiroshi Sawada
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      ,bytestring
                      ,process
                      ,directory
  default-language:    Haskell2010
  default-extensions:  RankNTypes
                     , MultiParamTypeClasses
                     , KindSignatures
                     , TemplateHaskell
                     , ScopedTypeVariables
                     , OverloadedStrings
                     , ViewPatterns
                     , RecordWildCards

executable regpuchi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , regpuchi
                     , bytestring
                     , mtl
                     , fgl
                     , graphviz
                     , text
                     , hspec
                     , directory
                     , process
                     
  default-language:    Haskell2010
  
test-suite regpuchi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/regpuchi
  
  